--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,15 +1,85 @@
 body{
-    background-color: wheat;
+    align-items: center;
 }
 
-header{
-    background-color: #ffffff;
-
-}
-.container{
+.main {
     background-image: url(dust_scratches.png);
 }
 
-footer {
+.header{
+    background-color: #ffffff;
+    margin: 50px;
+    border-color: #cccccc;
+}
+
+#name {
+    background-color: teal;
+    color: #ffffff;
+    padding: 15px;
+    margin-right: 800px;
+    margin-left: 20px;
+    text-align: center;
+}
+
+li {
+    display: inline;
+}
+
+.mainbio{
+    margin: auto
+}
+
+#mainbio{
+    float: left;
+}
+ #picofme {
+    display: inline;
+    width: 40px;
+    height: 50px;
+ }
+.pagelinks {
+    float: right;
+
+}
+
+.about me{
+    display: inline-block;
+    margin: 50px;
+}
+
+#connect{
+    float: right;
+    border-style: double;
+    border: #ffffff;
+    margin-right: 20px;
+    background-color: gold;
+    padding: 25px;
+}
+ 
+.container{
+    background-color: bisque;
+}
+
+
+.panel-heading{
+    font-size: 30px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+.panel body{
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    width: 50px;
+}
+
+#links{
+    font-size: 30px;
+}
+
+footer{
     background-color: #666666;
+    text-align: center;
+    font-size: 20px;
+    color: #ffffff;
+    margin: auto;
+    padding: 50px;
 }
