--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -2,8 +2,8 @@ body{
     align-items: center;
 }
 
-.main {
-    background-image: url(dust_scratches.png);
+.container {
+    background-image: url(./dust_scratches.png);
 }
 
 .header{
@@ -34,11 +34,14 @@ li {
 }
  #picofme {
     display: inline;
-    width: 40px;
-    height: 50px;
+    width: 200px;
+    height: 300px;
  }
 .pagelinks {
     float: right;
+    color: #cccc;
+    font-size: 26px;
+    text-decoration: none;
 
 }
 
@@ -47,28 +50,16 @@ li {
     margin: 50px;
 }
 
+
 #connect{
     float: right;
+    display: block;
     border-style: double;
+    border-width: 2px;
     border: #ffffff;
     margin-right: 20px;
-    background-color: gold;
+    background-color:white;
     padding: 25px;
-}
- 
-.container{
-    background-color: bisque;
-}
-
-
-.panel-heading{
-    font-size: 30px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-.panel body{
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    width: 50px;
 }
 
 #links{
@@ -80,6 +71,9 @@ footer{
     text-align: center;
     font-size: 20px;
     color: #ffffff;
-    margin: auto;
-    padding: 50px;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
