--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -4,6 +4,8 @@ body{
 
 .container {
     background-image: url(/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/dust_scratches.png);
+    padding-bottom: 50px;
+    padding-top: 25px;
 }
 
 .header{
@@ -11,6 +13,7 @@ body{
     margin-top: 10px;
     margin-bottom: 0px;
     border-color: #cccccc;
+    border-width: 5px;
 }
 
 #name {
@@ -25,22 +28,52 @@ body{
 
 }
 
+ul {
+    margin-right: 10px;
+    margin-top: 10%;
+    margin-left: 0;
+}
+
 li {
     display: inline;
     text-decoration: none;
+    size: 20px;
+}
+
+#github, #linkedin, #stack {
+    height: 80px;
+    padding-bottom: 20%;
+    padding-top: 40%;
+    padding-left: 0;
 }
 
 .mainbio{
     margin-right: 50%;
     margin-left: 10%;
+    margin-top: 10px;
     display: inherit;
-    width: 40%;
+    width: 640px;
+    background-color: #ffffff;
+    border-style: solid;
+    border-color: #dddddd;
+    border-width: 1px;
+    text-align: inherit;
+    font-size: xx-large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+p {
+    font-size: 20px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 25px;
 }
 
  #picofme {
-    display: inherit;
-    width: 200px;
-    height: 300px;
+    display: inline;
+    width: 95px;
+    height: 140px;
+    float: left;
+    padding: 15px;
  }
 .pagelinks {
     float: right;
@@ -51,9 +84,10 @@ li {
 
 }
 
-.about me{
-    display: inline-block;
-    margin: 50px;
+h2 {
+    border-bottom: #666666;
+    border-style: solid;
+    padding-bottom: 25px;
 }
 
 
@@ -61,32 +95,29 @@ li {
     float: right;
     display: block;
     border-style: solid;
-    border-color: black;
-    border-width: 90px;
-    border: #ffffff;
-    margin-top: 5%;
+    border-color: #dddddd;
+    border-width: 1px;
+    margin-top: 10px;
     margin-right: 10%;
-    background-color:white;
-    padding: 90px;
-}
-
-
-h2 {
-    text-decoration: underline;
+    background-color:#ffffff;
+    padding: 23px;
+    width: 270px;
+    text-align: center;
+    font-size: xx-large;
     color: teal;
-    font-size: 20px;
 }
 
-#links{
+
+.links{
     font-size: 30px;
 }
 
 footer{
     background-color: #666666;
     text-align: center;
-    font-size: 20px;
+    font-size: 10px;
     color: #ffffff;
-    padding: 10px;
+    padding: 1px;
     position: absolute;
     bottom: 0;
     right: 0;
