--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -4,13 +4,13 @@ body{
 
 .container {
     background-image: url(/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/dust_scratches.png);
-    padding-bottom: 50px;
+    padding-bottom: 90px;
     padding-top: 25px;
 }
 
 .header{
     background-color: #ffffff;
-    margin-top: 10px;
+    margin-top: 0;
     margin-bottom: 0px;
     border-color: #cccccc;
     border-width: 5px;
@@ -28,11 +28,19 @@ body{
 
 }
 
-ul {
-    margin-right: 10px;
-    margin-top: 10%;
-    margin-left: 0;
+.pagelinks {
+    float: right;
+    color: #cccc;
+    font-size: 20px;
+    text-decoration: none;
+    position: relative;
+    padding: 32px;
+    padding-top: 50px;
+    margin-right: 214px;
+    
+
 }
+
 
 li {
     display: inline;
@@ -40,32 +48,52 @@ li {
     size: 20px;
 }
 
-#github, #linkedin, #stack {
+#github, #stack {
     height: 80px;
-    padding-bottom: 20%;
-    padding-top: 40%;
+    padding-bottom: 10%;
+    padding-top: 10%;
     padding-left: 0;
 }
 
+#linkedin {
+    height: 90px;
+    padding-bottom: 8.5%;
+    padding-top: 10%;
+    padding-left: 0;  
+}
+
+
 .mainbio{
     margin-right: 50%;
-    margin-left: 10%;
+    margin-left: 11.5%;
     margin-top: 10px;
-    display: inherit;
-    width: 640px;
+    margin-bottom: 5px;
+    display: block;
+    width: 553px;
     background-color: #ffffff;
     border-style: solid;
     border-color: #dddddd;
     border-width: 1px;
-    text-align: inherit;
+    text-align: center;
     font-size: xx-large;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #4aaaa5;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+}
+
+#about {
+    text-align: left;
+    padding: 20px;
 }
 
 p {
     font-size: 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     padding: 25px;
+    text-align: left;
+    color: #777777;
 }
 
  #picofme {
@@ -75,14 +103,7 @@ p {
     float: left;
     padding: 15px;
  }
-.pagelinks {
-    float: right;
-    color: #cccc;
-    font-size: 20px;
-    text-decoration: none;
-    position: relative;
 
-}
 
 h2 {
     border-bottom: #666666;
@@ -98,18 +119,13 @@ h2 {
     border-color: #dddddd;
     border-width: 1px;
     margin-top: 10px;
-    margin-right: 10%;
+    margin-right: 175px;
     background-color:#ffffff;
     padding: 23px;
     width: 270px;
     text-align: center;
     font-size: xx-large;
-    color: teal;
-}
-
-
-.links{
-    font-size: 30px;
+    color: #4aaaa5;
 }
 
 footer{
@@ -117,7 +133,7 @@ footer{
     text-align: center;
     font-size: 10px;
     color: #ffffff;
-    padding: 1px;
+    padding: 15px;
     position: absolute;
     bottom: 0;
     right: 0;
