--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -3,8 +3,8 @@ body{
 }
 
 .container {
-    background-image: url(/Users/estephenson12/Desktop/Basic-Portfolio/assests/images/dust_scratches.png);
-    padding-bottom: 90px;
+    background-image: url(../images/dust_scratches.png);
+    padding-bottom: 89px;
     padding-top: 25px;
 }
 
@@ -116,12 +116,128 @@ p {
     padding: 15px;
  }
 
+ .contact {
+    margin-right: 50%;
+    margin-left: 11.5%;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    display: block;
+    width: 553px;
+    background-color: #ffffff;
+    border-style: solid;
+    border-color: #dddddd;
+    border-width: 1px;
+    text-align: center;
+    font-size: large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #777777;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+ }
+
+ #contact2{
+     font-size: xx-large;
+     color: #4aaaa5;
+     text-align: left;
+     padding-top: 25px;
+
+ }
+
+.form {
+    text-align: left;
+    padding-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ .labelsmall{
+     resize: vertical;
+     box-sizing: border-box;
+     width: 100%;
+     border: 1px solid #cccccc;
+     margin-top: 6px;
+     margin-bottom: 16px;
+     height: 40%;
+     padding: 10px;
+ }
+
+ #labelbig{
+     resize: vertical;
+     box-sizing: border-box; 
+     width: 100%;
+     margin-top: 6px;
+     margin-bottom: 16px;
+     border: 1px solid #cccccc;
+     height: 150px;
+     padding: 10px;
+ }
+
+ input[type=submit]{
+     border-style: hidden;
+     background-color: #4aaaa5;
+     border: none;
+     resize: vertical;
+     color: #ffffff;
+     padding: 10px;
+     font-size: 20px;
+     margin-bottom: 10px;
+ }
+
+
 
 h2 {
     border-bottom: #666666;
     border-style: solid;
     padding-bottom: 25px;
 }
+
+.portfolio{
+    width: 575px;
+    display: inline-block;
+    margin-left: 150px;
+    background-color: #ffffff;
+    border-style: solid;
+    border-color: #dddddd;
+    border-width: 1px;
+    margin-top: 10px;
+    padding: 25px;
+    text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+}
+
+#portfoliotext{
+    text-align: left;
+    padding: 20px;
+    font-size: xx-large;
+    color: #4aaaa5;
+    padding-bottom: 25px;
+}
+
+.images {
+    display: inline-block;
+    position: relative;
+    padding-top: 20px;
+   
+
+}
+
+#hangman,#rpg,#trivia,#rutgers,#rps{
+    width: 250px;
+    height: 210px;
+    
+}
+
+#hangman, #trivia{
+    padding-left: 0;
+}
+
+#rpg, #rutgers{
+    padding-left: 70px;
+
+}
+
+
 
 
 .connect{
@@ -145,9 +261,12 @@ footer{
     text-align: center;
     font-size: 10px;
     color: #ffffff;
-    padding: 15px;
-    position: absolute;
+    padding: 20px;
+    position: sticky;
     bottom: 0;
     right: 0;
     left: 0;
+    border-top: #4aaaa5;
+    border-style: solid;
+
 }
